[gd_scene load_steps=2 format=3 uid="uid://dxcfxn24whgwe"]

[ext_resource type="Script" path="res://assets/scenes/minimax_profile_editor/minimax_entry.gd" id="1_bf482"]

[node name="MinimaxEntry" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
script = ExtResource("1_bf482")

[node name="ProfileNameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="EditButton" type="Button" parent="."]
layout_mode = 2
text = "Edit Profile"

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
text = "Delete Profile"

[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
